package iuh.FactoryMethod;

public class Ship implements Transport {

    public void deliver() {
        System.out.println("Deliver by ship");
    }

}
