package iuh.FactoryMethod;

public interface Transport {
    void deliver();
}