package iuh.FactoryMethod;

public abstract class TransportFactory {

    public abstract Transport createTransport();

}