package iuh.FactoryMethod;

public class Truck implements Transport {

    public void deliver() {
        System.out.println("Deliver by truck");
    }

}